# finance-buddy

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .mise.toml  .oxlintrc.json  .prettierignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  backup_20260117_092322.sql  codecov.yml  components.json  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  plan.md  playwright.config.ts  pyproject.toml  renovate.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  ruff.toml
backend-bb-tests/: README.md  _golden.py  conftest.py  pyproject.toml
backend-bb-tests/fixtures/: Dockerfile.seed  run_seed.py  seed.py
backend-bb-tests/golden/: accounts_list.json  assets_list.json  company_valuations_list.json  config_get.json  cpi_series.json  debts_list.json  goals_list.json  investment_bond_stats.json  investment_stock_stats.json  payments_counts.json  payments_list.json  retirement_limits_2025.json  retirement_ppk_stats.json  retirement_stats_2025.json  simulations_mortgage_vs_invest.json  simulations_prefill.json  simulations_retirement.json  snapshots_list.json  transactions_counts.json  transactions_list.json  zus_calculate_marcin.json  zus_prefill_marcin.json
backend-bb-tests/tests/: test_accounts.py  test_assets.py  test_auth.py  test_bonus_events.py  test_company_valuations.py  test_config.py  test_cpi.py  test_dashboard.py  test_debt_payments.py  test_debts.py  test_dividends.py  test_equity_grants.py  test_goals.py  test_health.py  test_investment.py  test_personas.py  test_personas_mutations.py  test_retirement.py  test_rules.py  test_salary_records.py  test_scenarios.py  test_simulations.py  test_snapshots.py  test_transactions.py  test_validation_errors.py  test_zus.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_schema.py  0002_add_cpi_index.py  0003_goal_account_and_category.py  0004_add_perf_indices.py  0005_add_bonus_events.py  0005_add_snapshot_aggregates.py  0006_add_equity_grants.py  0006_backfill_snapshot_aggregates.py  0007_add_bonus_events.py  0007_add_company_valuations.py  0008_add_equity_grants.py  0008_add_fx_rates.py  0009_add_company_valuations.py  0010_add_fx_rates.py
backend/app/: main.py
backend/app/api/: assets.py  (+18 more)
backend/finance_buddy_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: 001_add_account_purpose.py  002_add_metric_fields.py  add_ppk_rates.py  add_receives_contributions.py  add_transaction_unique_constraint.py
backend/scripts/: dump_openapi.py  migrate_debt_payments.py  migrate_excel.py  migrate_investments.py  migrate_schema.sql  migrate_split_accounts.py
backend/tests/: conftest.py  factories.py  test_aggregate_parity.py  test_aggregate_spec.py  test_api_accounts.py  test_api_assets.py  test_api_bonus_events.py  test_api_company_valuations.py  test_api_config.py  test_api_cpi.py  test_api_debt_payments.py  test_api_debts.py  test_api_equity_grants.py  test_api_goals.py  test_api_investment.py  test_api_personas.py  test_api_salary_records.py  test_api_simulations.py  test_api_transactions.py  test_core_database.py  test_core_init_db.py  test_invalidation_hooks.py  test_main.py  test_migrate_excel.py  test_models_account.py  test_models_account_postgres.py  test_models_goal.py  test_models_snapshot.py  test_schemas_assets.py  test_schemas_bonus_events.py  test_schemas_debts.py  test_schemas_personas.py  test_schemas_retirement.py  test_schemas_salary_records.py  test_schemas_snapshots.py  test_services_accounts.py  test_services_assets.py  test_services_bonus_events.py  test_services_company_valuations.py  test_services_dashboard.py  (+18 more)
(+641 files in other folders)
